@@ -1,3 +1,7 @@
+2005-08-29 00:25  hjanuschka
+
+	* ChangeLog, src/libs/Makefile, src/libs/mysql.c: [no log message]
+
 2005-08-28 20:00  hjanuschka
 
 	* src/: bartlby.c, libs/mysql.c: data_lib api extended,
